--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h2{
 }
 
 
-.input{
+.display{
     font-size: 20px;
     color: #004d00;
     font-weight: 700;
@@ -44,6 +44,7 @@ h2{
     margin: 5px;
     right: 0%;
     text-align: left;
+    width: auto;
 }
 
 .grid-container{
@@ -62,8 +63,8 @@ h2{
     margin: 15px;
     border: 2px solid black;
     border-radius: 50px;
-    float: inline-start;
-    width: auto;
+    float: left;
+    width: 100%;
 }
 
 #tsalary{
@@ -76,7 +77,7 @@ h2{
     
 }
 
-#entry{
+#btn-submit{
     width: 150px;
     height: 40px;
     font-size: 20px;
@@ -89,7 +90,7 @@ h2{
     padding: 5px;
 }
 
-#entry:hover{
+#btn-submit:hover{
     width: 150px;
     height: 40px;
     font-size: 23px;
